# Valut39-encrypto

./: README.md  license.md  package.json  pnpm-lock.yaml
Nil-wallet-encrypto-macos.app/Contents/: Info.plist
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: encrypto.rs  main.rs
src-tauri/src/resources/: wordlist_minimal.txt
windows/: Nil-wallet-encrypto_0.0.0_x64.dmg
