[package]
name = "stable"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-open", "dialog-save", "path-all", "dialog-message", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4"
tokio = { version = "1.32.0", features = ["full"] }
chacha20 = "0.9.1"
bs58 = "0.5.0"
generic-array = "0.14.7"
typenum = "1.16.0"
anyhow = "1.0.75"
tauri-api = "0.7.6"
semver = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
